# -

cvbcvbdfgn-main/: CHANGELOG.md  CLEANUP_REPORT.md  CONNECTION_ISSUE_REPORT.md  FINAL_BUG_CHECK_REPORT.md  FINAL_CLEANUP_SUMMARY.md  FULL_SYSTEM_BUG_REPORT.md  MAFIA_AUTO_SETUP_REPORT.md  QUICK_GUIDE.md  README.md  admin_applications.py  auto_recovery_system.py  bot.py  channel_protection_system.py  command_system.py  config.py  debug_commands.py  enhanced_logging_system.py  env.example  install.bat  mafia_system.py  main.py  moderation_logs.py  music_system.py  mute_system.py  ping_protection.py  private_chat_system.py  protection_panel_system.py  pyproject.toml  raid_protection.py  raid_protection_buttons.py  requirements.txt  run.bat  support_system.py  test_connection.py  verification_system.py  verified_users.json  ИНСТРУКЦИЯ.md
