[project]
name = "discord-welcome-bot"
version = "1.0.0"
description = "Discord Welcome Bot for Limonericx Server"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.5.2",
    "aiohttp>=3.7.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
